px4_ws/logs/px4_offboard/build.make.166.log
[  0%] [  0%] Built target _catkin_empty_exported_target
Built target geometry_msgs_generate_messages_lisp
[  0%] [  0%] Built target std_msgs_generate_messages_lisp
Built target diagnostic_msgs_generate_messages_lisp
[  0%] [  0%] Built target diagnostic_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_cpp
Built target _px4_offboard_generate_messages_check_deps_JoyCommand
[  0%] Built target _px4_offboard_generate_messages_check_deps_CtrlState
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] [  0%] [  0%] Built target diagnostic_msgs_generate_messages_py
Built target nav_msgs_generate_messages_py
[  0%] [  0%] Built target nav_msgs_generate_messages_lisp
Built target mavros_msgs_generate_messages_py
Built target sensor_msgs_generate_messages_py
[  0%] [  0%] Built target actionlib_msgs_generate_messages_cpp
Built target geometry_msgs_generate_messages_py
[  0%] Built target nav_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_cpp
[  0%] [  0%] [  0%] [  0%] [  0%] Built target sensor_msgs_generate_messages_cpp
Built target rosgraph_msgs_generate_messages_py
Built target sensor_msgs_generate_messages_lisp
Built target rosgraph_msgs_generate_messages_cpp
Built target std_msgs_generate_messages_py
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target mavros_msgs_generate_messages_cpp
[  0%] [  0%] [  0%] [  0%] Built target actionlib_generate_messages_cpp
Built target actionlib_msgs_generate_messages_py
Built target rosgraph_msgs_generate_messages_lisp
Built target actionlib_msgs_generate_messages_lisp
[  0%] [  0%] [  0%] Built target mavros_msgs_generate_messages_lisp
Built target actionlib_generate_messages_lisp
Built target tf2_msgs_generate_messages_cpp
[  0%] Built target tf2_msgs_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_py
[  0%] Built target actionlib_generate_messages_py
[ 25%] Built target px4_offboard_generate_messages_py
[ 41%] Built target px4_offboard_generate_messages_lisp
[ 50%] Built target teleop
[ 66%] Built target px4_offboard_generate_messages_cpp
[35m[1mScanning dependencies of target SLAM
[ 75%] Built target checker
[ 75%] Built target px4_offboard_generate_messages
[ 83%] Built target mission
[0m[ 91%] Built target apriltag
[100%] [32mBuilding CXX object CMakeFiles/SLAM.dir/src/SLAM.cpp.o
In file included from /home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/SLAM.cpp:3:0:
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp: In member function 'bool CtrlPx4::commandUpdate()':
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp:120:24: error: expected ';' before ')' token
   cin >> yaw_cali_value)
                        ^
make[2]: *** [CMakeFiles/SLAM.dir/src/SLAM.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
